fix(footer): fix text cutoff in footer

--- a/src/assets/stylesheets/_layout.less
+++ b/src/assets/stylesheets/_layout.less
@@ -7,7 +7,6 @@ body {
   padding: 20px;
 }
 .content { background-color: @color-pf-white; }
-.top-footer { min-height: 225px; }
 .bottom-footer { min-height: 60px; }
 .padding--top_grid-50 { padding-top: 50px; }
 .padding--top_grid-150 { padding-top: 150px; }
